# upstageailab-ir-competition-ir-4

./: .gitignore  AGENTS.md  README.md  pyproject.toml
code/: hard_voting.py  hard_voting_weight.py  hard_voting_weight2.py
code/baseline/: env_template.txt  install_elasticsearch.sh  install_elasticsearch_9.0.3.sh  rag_with_elasticsearch.ipynb  rag_with_elasticsearch.py  start_elasticsearch.sh  stop_elasticsearch.sh
code/eval/: reranker_eval.py
code/jhryu/: baseline_only_retrieve.py
code/jhryu/conf/: baseline.yaml  config.yaml
code/mentoring/: biencoder.py  convert_reranked_to_submission.py  flash_attn_installation.md  reranked_submission.csv  rerankek2.py  reranker.py  reranker2.py  run_biencoder.sh  run_reranker.sh  run_reranker2.sh  similarity_scores.csv  voting.py
code/rag_with_hydra/: env_template.txt  rag_with_hydra.py  rag_with_hydra_hybrid.py
code/rag_with_hydra/conf/: config.yaml
code/rag_with_hydra_reranker/: README_gemini_embeddings.md  check_search_decision.py  env_template.txt  gemini_embedding_generator.py  rag_with_hybrid_reranker_es8.py  rag_with_hybrid_reranker_es9.py  rag_with_hybrid_reranker_es9_voting.py  rag_with_hydra_hybrid_sbert_reranker.py  rag_with_hydra_hybrid_upstage_reranker.py  rag_with_hydra_reranker.py  rag_with_hydra_reranker2.py  reranker_usage.py  run.sh  test_reranker.py
code/rag_with_hydra_reranker/conf/: baseline.yaml  (+11 more)
docs/: note_jhryu.md  note_taehyun.md  ppt_template.md  ppt_template_draft.md  trouble_shooting_flash_attention.md  실험요약_태현.md
scripts/: enable_flash_attn_env.sh  python_glibc32_wrapper.sh
(+10 files in other folders)
